--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"class-validator": "^0.13.1",
 		"dotenv": "^8.2.0",
 		"image-pal-sharp": "^1.2.2",
+		"jsonwebtoken": "^8.5.1",
 		"kue": "^0.11.6",
 		"lower-case-first": "^2.0.2",
 		"moment": "^2.29.1",
@@ -63,7 +64,9 @@
 		"@types/express": "^4.17.11",
 		"@types/faker": "^5.1.6",
 		"@types/jest": "^26.0.20",
+		"@types/jsonwebtoken": "^8.5.1",
 		"@types/kue": "^0.11.13",
+		"@types/moment": "^2.13.0",
 		"@types/mongodb": "^3.6.3",
 		"@types/node": "^14.14.22",
 		"@types/sharp": "^0.28.0",
